syncthing/service.yml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-service
  namespace: network-daemons
spec:
  selector:
    app: syncthing
  ports:
    - name: http
      protocol: TCP
      port: 8384
      targetPort: 8384
